--- a/homepage.css
+++ b/homepage.css
@@ -1,15 +1,15 @@
 <style>
-      * {
-        box-sizing: border-box;
-      }
+    * {
+    box-sizing: border-box;
+  }
 /*BODY TEXT*/
-      body {
-        font-family:monospace;
-        color: #05386B;
-        padding: 10px;
-        background: #379683;
-        margin: 0;
-      }
+  body {
+    font-family:Georgia;
+    color: #05386B;
+    padding: 5px;
+    background:	#fffafa;
+    margin: 0;
+  }
 /* HEADER
       .header {
         padding: 30px;
@@ -29,103 +29,49 @@
 
 /*ACCOUNT CARDS*/
 /* Left column */
-      .leftcolumn {
-        float: left;
-        padding: 30px;
-        width: 40%;
-        height: 30%;
-
-        border-style: solid;
-        border-width: thick;
-        border-color: lightyellow;
-        border-radius: 25px;
-      }
+  .leftcolumn {
+    float: left;
+    margin-left: 20px;
+    padding: 30px;
+    width: 40%;
+    height: 30%;
+    padding-bottom:5%;
+  }
 
 /* Right column */
-      .rightcolumn {
-        float: right;
-        padding: 30px;
-        width: 40%;
-        height: 30%;
+  .rightcolumn {
+    float: right;
+    margin-right: 20px;
+    padding: 30px;
+    width: 40%;
+    height: 30%;
+  }
 
-        border-style: solid;
-        border-width: thick;
-        border-color: lightyellow;
-        border-radius: 25px;
-      }
+  .account {
+    background-color: #EDF5E1;
+    padding: 20px;
+    margin-top: 20px;
+  }
+  .account a{
+    float: left;
+    display: block;
+    background-color: #5cdb95;
+    color: #EDF5E1;
+    text-align: center;
+    text-decoration: none;
+  }
 
-
-/*BEGIN:Picture on bottom of homepage*/
-      .container {
-        position:sticky;
-        width: 60%;
-      }
-      .image {
-        display: table;
-        width: 100%;
-        height: 100%;
-        border-radius: 15%;
-      }
-      .overlay {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-        border-radius: 10%;
-        background-image:url("960x0.jpg");
-      }
-      .container:hover .overlay {
-        opacity: 1;
-      }
-      .text {
-        color: white;
-        font-family: monospace;
-        font-size: 35px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-      }
-      .column {
-        float: right;
-        height: 40%;
-        width: 25%;
-        padding: 5px;
-        margin: 3%;
-      }
-/*END:Picture on bottom of homepage*/
-
-
-      .account {
-        background-color: #EDF5E1;
-        padding: 20px;
-        margin-top: 20px;
-      }
-      .account a{
-            float: left;
-            display: block;
-            background-color: #5cdb95;
-            color: #EDF5E1;
-            text-align: center;
-            text-decoration: none;
-      }
-      /* Clear floats after the columns */
-      .row:after {
-        content: "";
-        display: table;
-        clear: both;
-      }
+/* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
 /*TOP LINK BAR*/
   .topnav {
     overflow: hidden;
-    background-color: #EDF5E1;
+    background-color: #a8e4a0;
   }
   .topnav2 {
     overflow: hidden;
@@ -149,56 +95,17 @@
   }
   /* Change color on hover */
   .topnav a:hover {
-      background-color:  #F7C331;
+      background-color:  dodgerblue;
       color: white;
   }
   .topnav2 a:hover {
-      background-color:  #F7C331;
+      background-color:  dodgerblue;
       color: white;
   }
   .topnav a.active {
     background-color: #4CAF50;
     color: white;
   }
-      /*Dropdown button stuff*/
-      	.dropbtn{
-      	  background-color: #F7882F ;
-      	  font-family: Arial;
-      	  color: white;
-      	  font-size: 20px;
-      	  border: none;
-      	  cursor: pointer;
-          padding: 10px 16px;
-      	}
-      	.dropdown{
-      	  font-family: Arial;
-      	  position: absolute;
-      	  display: block;
-      	  padding: 15px;
-      	  text-align: center;
-      	}
-      	.dropdown-content{
-      	  display: none;
-      	  position: absolute;
-      	  background-color: lightyellow;
-      	  min-width: 10px;
-      	  box-shadow: 0px 8px 14px 0px rgba(0,0,0,0.2);
-      	}
-      	.dropdown-content a{
-      	  color: black;
-      	  text-decoration: none;
-      	  display: block;
-      	}
-      	.dropdown-content a:hover {
-      		background-color: #F7C331;
-      	}
-      	.dropdown:hover .dropdown-content {
-      	  display: block;
-      	}
-      	.dropdown:hover .dropbtn{
-      		background-color:  #F7C331;
-      	}
-
 
 /*BEGIN: SIDE MENU STUFF*/
   .sidenav {
@@ -208,7 +115,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: lightyellow;
+    background-color: #a8e4a0;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -222,7 +129,7 @@
     transition: 0.3s;
   }
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: #fffafa;
   }
   .sidenav .closebtn {
     position: absolute;
@@ -242,50 +149,191 @@
 /*END: SIDE MENU STUFF*/
 
 /*BEGIN: Header*/
-.header {
-  overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 20px 10px;
-  background-image:url("https://image.shutterstock.com/image-vector/natural-forest-trees-mountains-horizon-260nw-1588730179.jpg");
-}
-.header a {
-  float: center;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  position:relative;
-  left: 35%;
-}
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
-  margin-top: 40px;
-}
-.header-right {
-  float: right;
-}
-@media screen and (max-width: 500px) {
+  .header {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    border-style: solid;
+    border-color: #a8e4a0;
+    border-width: thick;
+    border-top: none;
+    padding: 50px 20px;
+    background-image:url("https://image.shutterstock.com/image-vector/natural-forest-trees-mountains-horizon-260nw-1588730179.jpg");
+  }
   .header a {
-    float: none;
-    display: block;
-    text-align: left;
+    float: center;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+
+  }
+  .header a.logo {
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    position:relative;
+    left: 30%;
+  }
+  .header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .header a.active {
+    background-color: dodgerblue;
+    color: white;
+    margin-top: 0px;
   }
   .header-right {
-    float: none;
+    float: right;
   }
-}
+  @media screen and (max-width: 500px) {
+    .header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .header-right {
+      float: none;
+    }
+  }
 /*END: Header*/
+
+/*BEGIN: SECTION*/
+  .section{
+    border-bottom-style:solid;
+    border-color: dodgerblue;
+    padding-bottom: 5px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+/*END: SECTION*/
+
+/*BEGIN: IMAGE*/
+  img{
+    height: 290px;
+    width: 330px;
+    margin-left: 100px;
+    opacity: .87;
+  }
+
+
+  img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
+/*END: IMAGE*/
+
+/*BEGIN: TEXT STUFF*/
+  h1 {
+    text-align: center;
+    letter-spacing: 3px;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #1e90ff;
+  }
+
+  p{
+    text-align: justify;
+    letter-spacing: 3px;
+    color: #004242;
+    text-decoration-line: black;
+  }
+/*END: TEXT STUFF*/
+
+/*BEGIN: Buttons*/
+  .button {
+    background-color: #fffafa;
+    border-radius: 0%;
+    color: #b0e0e6;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration:none;
+    display:block;
+    font-size: 25px;
+    margin: 2px 1px;
+    cursor: pointer;
+    font-family:times;
+  }
+  .button1 {
+    background-color: #4CAF50;
+    color: #fffafa;
+    border: 3px double #4CAF50;
+  }
+  .button1:hover {
+    background-color: #fffafa;
+    color: #1e90ff;
+  }
+/*END: Buttons*/
+
+/*BEGIN: SlideShow*/
+  /* Slideshow container */
+  .slideshow-container {
+    position: relative;
+    background: #a8e4a0;
+  }
+  /* Slides */
+  .mySlides {
+    display: none;
+    padding: 80px;
+    text-align: center;
+    overflow: auto;
+  }
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #fffafa;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  /* Position the "next button" to the right */
+  .next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: #fffafa;
+    color: black;
+  }
+  /* The dot/bullet/indicator container */
+  .dot-container {
+      text-align: center;
+      padding: 20px;
+      background: #4CAF50;
+  }
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #a8e4a0;
+    border-radius: 50%;
+    display: inline-block;
+    transition:0.5s ease;
+  }
+  /* Add a background color to the active dot/circle */
+  .active, .dot:hover {
+    background-color: #fffafa;
+  }
+  /* Add an italic font style to all quotes */
+  q {font-style: italic;}
+  /* Add a blue color to the author */
+  .author {
+    text-align: center;
+    color: cornflowerblue;
+  }
+/*END: SlideShow*/
 
 </style>
