--- a/homepage.css
+++ b/homepage.css
@@ -7,7 +7,7 @@
     font-family:Georgia;
     color: #05386B;
     padding: 5px;
-    background:	#fffafa;
+    background:	#FFFFF0;
     margin: 0;
   }
 /* HEADER
