--- a/registerStyle.css
+++ b/registerStyle.css
@@ -1,47 +1,49 @@
 
 body
 {
-  background: linear-gradient(to bottom, royalblue 10%, lightblue 100%);
-}
-
-p
-{
-  margin-right: 500px;
-  margin-left: 500px;
+  background: #FFFFE0;
 }
 
 h1
 {
-  color: black;
-  font-family; monospace;
-  margin-left: 422px;
-  border-radius: 10px;
-  background-color: lightyellow;
-  width: 580px;
+  color: white;
+  font-size: 50px;
+  font-family: Ariel;
+  margin-left: 200px;
+  background: #90EE90;
+  width: 1020px;
+  height: 300px;
+  vertical-align: middle;
   text-align: center;
+  margin-bottom: 100px;
+  background-image:url("https://image.shutterstock.com/image-vector/natural-forest-trees-mountains-horizon-260nw-1588730179.jpg");
+  background-repeat: no-repeat;
+  background-size: 1020px 350px;
+  background-position: center;
 }
 
  #form
 {
-  background-color: lightyellow;
+  background-color: lightgreen;
   height: 600px;
-  width: 600px;
+  width: 1030px;
   margin-right: auto;
   margin-left:  auto;
   margin-top: 0px;
-  border-radius: 5%;
 
 }
 
 label
 {
-  font-family: monospace;
-  font-size: 18px;
+  font-family: Ariel;
+  font-size: 50px;
+  color: white;
+  font-size: 30px;
   color: #333;
   height: 20px;
   width: 200px;
-  margin-top: 45px;
-  margin-left: 40px;
+  margin-top: 40px;
+  margin-left: 240px;
   text-align: justify;
   margin-right: 0px;
   float: left;
@@ -52,14 +54,18 @@ input
   height: 20px;
   width: 300px;
   border: 1px solid #000;
-  margin-top: 50px;
-  margin-bottom: 0px;
-  margin-right: 20px;
+  margin-top: 55px;
+  margin-left: 80px;
+  margin-right: 40px;
 }
 
 #submit
 {
-  font-family: monospace;
-  margin-left: 150px;
-  radius: 10px;
+  font-family: Ariel;
+  margin-left: 350px;
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  background-color: lightgreen;
+  border-color: green;
 }
