--- a/deposit.css
+++ b/deposit.css
@@ -80,4 +80,30 @@
             text-decoration: none;
       }
 
+/*FOR DISPLAYING TABLES*/
+      #customers {
+             font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+             border-collapse: collapse;
+             width: 100%;
+      }
+      #customers td, #customers th {
+             border: 2px solid #ddd;
+             padding: 8px;
+      }
+
+      #customers tr:hover {background-color: #ddd;}
+
+      #customers th {
+             padding-top: 12px;
+             padding-bottom: 12px;
+             text-align: left;
+             background-color: #379683;
+             color: white;
+      }
+      .display {
+            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+             border-collapse: collapse;
+             width: 100%;
+      }
+
 </style>
