--- a/transferstyle.css
+++ b/transferstyle.css
@@ -1,59 +1,55 @@
-/* The container must be positioned relative: */
-.custom-select {
-  position: relative;
-  font-family: Arial;
+
+.heading
+{
+  font-size: 50px;
+  line-height: 200%;
+  text-align: center;
+  background-color: #00e673;
+  border-radius: 10px;
+  border-width: 40%;
+  height: 100px;
+  margin-left: 25%;
+  margin-right: 25%;
+  background-position: center;
+  margin-bottom: 5%;
 }
 
-.custom-select select {
-  display: none; /*hide original SELECT element: */
+ .custom-select
+{
+  font-size: 20px;
+  background-color: #00e673;
+  border-radius: 10%;
+  margin-right: auto;
+  margin-left:  auto;
+  line height: 0%;
+  width: 35%;
 }
 
-.select-selected {
-  background-color: DodgerBlue;
-}
+.titleSize
+{
+  font-family: Ariel;
+  margin-left: 35%;
+  margin-right: 25%;
+  float: left;
 
-/* Style the arrow inside the select element: */
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
 }
+/* #transferAmnt
+{
+  /* margin-bottom: 10%; */
+  /* margin-left: 30%;
+  margin-right: 25%;
+}*/
 
-/* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
+ .size {
+  margin-left: 35%;
+  margin-right: 25%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
+#submit
+{
+  font-family: Ariel;
+  background-color: #53c68c;
+  width: 30%;
 
-/* style the items (options), including the selected item: */
-.select-items div,.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-}
-
-/* Style items (options): */
-.select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-/* Hide the items when the select box is closed: */
-.select-hide {
-  display: none;
-}
-
-.select-items div:hover, .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
 }
