--- a/registerStyle.css
+++ b/registerStyle.css
@@ -1,15 +1,3 @@
-<<<<<<< HEAD
-/* html
-{
-  height: 100%;
-  width: 100%;
-} */
-body
-{
-  background: #00cc66;
-  /* height: 100%
-  width: 100%; */
-=======
 <style>
     * {
     box-sizing: border-box;
@@ -38,7 +26,6 @@ body
         color: lightyellow;
         font-family: monospace;
       } */
->>>>>>> 24497aa81bc2101c912d3ae61baf16b67c4ab96e
 
 /*ACCOUNT CARDS*/
 /* Left column */
@@ -74,34 +61,6 @@ body
     text-decoration: none;
   }
 
-<<<<<<< HEAD
-#box1
-{
-  background-color: #00e673;
-  height: 280px;
-  width: 320px;
-  border-color: #00e673;
-  border-style: outset;
-  /* margin-left:20px;
-  margin-right: 10px;
-  margin-top: 10px; */
-}
-
-#box2
-{
-  background:#00e673;
-  /* margin-left: 20px;
-  margin-right: 10px;
-  margin-top: 10px; */
-  width: 320px;
-  height: 300px;
-  border-color: #00e673;
-  border-style: groove;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-=======
 /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -147,7 +106,6 @@ body
     background-color: #4CAF50;
     color: white;
   }
->>>>>>> 24497aa81bc2101c912d3ae61baf16b67c4ab96e
 
 /*BEGIN: SIDE MENU STUFF*/
   .sidenav {
@@ -190,23 +148,6 @@ body
   }
 /*END: SIDE MENU STUFF*/
 
-<<<<<<< HEAD
-}
-#box4
-{
-  background:#00e673;
-  /* margin-left: 20px;
-  margin-right: 10px;*/
-  margin-top: 2px;
-  width: 320px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-color: #00e673;
-  border-style: outset;
-}
-=======
 /*BEGIN: Header*/
   .header {
     overflow: hidden;
@@ -225,7 +166,6 @@ body
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
->>>>>>> 24497aa81bc2101c912d3ae61baf16b67c4ab96e
 
   }
   .header a.logo {
@@ -259,17 +199,6 @@ body
   }
 /*END: Header*/
 
-<<<<<<< HEAD
- #form
-{ position: float;
-  background-color:#00e673;
-  height: 600px;
-  width: 700px;
-  margin-right: auto;
-  margin-left:  auto;
-  border-color: #00e673;
-  border-style: outset;
-=======
 /*BEGIN: SECTION*/
   .section{
     padding-bottom: 5px;
@@ -278,7 +207,6 @@ body
     background: #FFFFE0;
   }
 /*END: SECTION*/
->>>>>>> 24497aa81bc2101c912d3ae61baf16b67c4ab96e
 
 /*BEGIN: IMAGE*/
   img{
@@ -311,32 +239,112 @@ body
   }
 /*END: TEXT STUFF*/
 
+/*BEGIN: Buttons*/
+  .button {
+    background-color: #fffafa;
+    border-radius: 0%;
+    color: #b0e0e6;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration:none;
+    display:block;
+    font-size: 25px;
+    margin: 2px 1px;
+    cursor: pointer;
+    font-family:times;
+  }
+  .button1 {
+    background-color: #4CAF50;
+    color: #fffafa;
+    border: 3px double #4CAF50;
+  }
+  .button1:hover {
+    background-color: #FFFFE0;
+    color: #1e90ff;
+  }
+/*END: Buttons*/
+
+/*BEGIN: SlideShow*/
+  /* Slideshow container */
+  .slideshow-container {
+    position: relative;
+    background: lightyellow;
+  }
+  /* Slides */
+  .mySlides {
+    display: none;
+    padding: 80px;
+    text-align: center;
+    overflow: auto;
+  }
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #8FBC8F;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  /* Position the "next button" to the right */
+  .next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: #8FBC8F;
+    color: #fffafa;
+  }
+  /* The dot/bullet/indicator container */
+  .dot-container {
+      text-align: center;
+      padding: 20px;
+      background: #8FBC8F;
+  }
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #a8e4a0;
+    border-radius: 50%;
+    display: inline-block;
+    transition:0.5s ease;
+  }
+  /* Add a background color to the active dot/circle */
+  .active, .dot:hover {
+    background-color: #fffafa;
+  }
+  /* Add an italic font style to all quotes */
+  q {font-style: italic;}
+  /* Add a blue color to the author */
+  .author {
+    text-align: center;
+    color: cornflowerblue;
+  }
+/*END: SlideShow*/
+
 /*BEGIN: Login Form*/
 .loginform{
-  box-sizing: border-box;
+      box-sizing: border-box;
   margin-left: 30%;
   margin-right: 5%;
   background: #FFFFE0;
 
   text-align: center;
 
-<<<<<<< HEAD
-#submit
-{
-  font-family: Ariel;
-  margin-left: 350px;
-  width: 200px;
-  height: 40px;
-  font-size: 20px;
-  background-color: #00e673;
-  border-color: #39ac73;
-  border-style: outset;
-=======
-  float: center;
+  float: left;
   padding:20px;
   width: 40%;
-  height: 75%;
->>>>>>> 24497aa81bc2101c912d3ae61baf16b67c4ab96e
+  height: 79%;
 }
 
 input {
@@ -359,5 +367,4 @@ button[type=submit] {
   width: 100%;
 }
 /*END: Login Form*/
-
 </style>
