--- a/registerStyle.css
+++ b/registerStyle.css
@@ -1,5 +1,13 @@
-<style>
-    * {
+/* html
+{
+  height: 100%;
+  width: 100%;
+} */
+body
+{
+  background: #00cc66;
+  /* height: 100%
+  width: 100%; */
     box-sizing: border-box;
   }
 /*BODY TEXT*/
@@ -61,6 +69,30 @@
     text-decoration: none;
   }
 
+#box1{
+  background-color: #00e673;
+  height: 280px;
+  width: 320px;
+  border-color: #00e673;
+  border-style: outset;
+  /* margin-left:20px;
+  margin-right: 10px;
+  margin-top: 10px; */
+}
+
+#box2{
+  background:#00e673;
+  /* margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 10px; */
+  width: 320px;
+  height: 300px;
+  border-color: #00e673;
+  border-style: groove;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -148,6 +180,19 @@
   }
 /*END: SIDE MENU STUFF*/
 
+#box4{
+  background:#00e673;
+  /* margin-left: 20px;
+  margin-right: 10px;*/
+  margin-top: 2px;
+  width: 320px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-color: #00e673;
+  border-style: outset;
+}
 /*BEGIN: Header*/
   .header {
     overflow: hidden;
@@ -166,7 +211,6 @@
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
-
   }
   .header a.logo {
     font-size: 50px;
@@ -199,6 +243,15 @@
   }
 /*END: Header*/
 
+ #form{ position: float;
+  background-color:#00e673;
+  height: 600px;
+  width: 700px;
+  margin-right: auto;
+  margin-left:  auto;
+  border-color: #00e673;
+  border-style: outset;
+}
 /*BEGIN: SECTION*/
   .section{
     padding-bottom: 5px;
@@ -239,112 +292,29 @@
   }
 /*END: TEXT STUFF*/
 
-/*BEGIN: Buttons*/
-  .button {
-    background-color: #fffafa;
-    border-radius: 0%;
-    color: #b0e0e6;
-    padding: 10px 25px;
-    text-align: center;
-    text-decoration:none;
-    display:block;
-    font-size: 25px;
-    margin: 2px 1px;
-    cursor: pointer;
-    font-family:times;
-  }
-  .button1 {
-    background-color: #4CAF50;
-    color: #fffafa;
-    border: 3px double #4CAF50;
-  }
-  .button1:hover {
-    background-color: #FFFFE0;
-    color: #1e90ff;
-  }
-/*END: Buttons*/
-
-/*BEGIN: SlideShow*/
-  /* Slideshow container */
-  .slideshow-container {
-    position: relative;
-    background: lightyellow;
-  }
-  /* Slides */
-  .mySlides {
-    display: none;
-    padding: 80px;
-    text-align: center;
-    overflow: auto;
-  }
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -30px;
-    padding: 16px;
-    color: #8FBC8F;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  /* Position the "next button" to the right */
-  .next {
-    position: absolute;
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: #8FBC8F;
-    color: #fffafa;
-  }
-  /* The dot/bullet/indicator container */
-  .dot-container {
-      text-align: center;
-      padding: 20px;
-      background: #8FBC8F;
-  }
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #a8e4a0;
-    border-radius: 50%;
-    display: inline-block;
-    transition:0.5s ease;
-  }
-  /* Add a background color to the active dot/circle */
-  .active, .dot:hover {
-    background-color: #fffafa;
-  }
-  /* Add an italic font style to all quotes */
-  q {font-style: italic;}
-  /* Add a blue color to the author */
-  .author {
-    text-align: center;
-    color: cornflowerblue;
-  }
-/*END: SlideShow*/
-
 /*BEGIN: Login Form*/
 .loginform{
-      box-sizing: border-box;
+  box-sizing: border-box;
   margin-left: 30%;
   margin-right: 5%;
   background: #FFFFE0;
 
   text-align: center;
-
-  float: left;
+}
+#submit
+{
+  font-family: Ariel;
+  margin-left: 350px;
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  background-color: #00e673;
+  border-color: #39ac73;
+  border-style: outset;
+  float: center;
   padding:20px;
   width: 40%;
-  height: 79%;
+  height: 75%;
 }
 
 input {
@@ -367,4 +337,5 @@ button[type=submit] {
   width: 100%;
 }
 /*END: Login Form*/
+
 </style>
