made changes to the atm.css changed account class

--- a/atm.css
+++ b/atm.css
@@ -49,8 +49,8 @@
 
   .account {
     background-color: #EDF5E1;
-    padding: 20px;
-    margin-top: 50px;
+    padding: 10%;
+    margin-top: 10%;
     left: 60%;
     position: relative;
 
