--- a/homepage.css
+++ b/homepage.css
@@ -194,8 +194,7 @@
 
 /*BEGIN: IMAGE*/
   img{
-    height: 290px;
-    width: 330px;
+    width: 70%;
     margin-left: 100px;
     opacity: .87;
   }
