changed color to fit theme

--- a/addAccount.css
+++ b/addAccount.css
@@ -4,10 +4,11 @@
       }
       /*BODY TEXT*/
       body {
-        font-family: Arial;
+        font-family:Georgia;
         color: #05386B;
-        padding: 10px;
-        background: #379683;
+        padding: 5px;
+        background:	#a8e4a0;
+        margin: 0;
       }
       /* HEADER */
       .header {
