--- a/addAccount.css
+++ b/addAccount.css
@@ -6,9 +6,8 @@
       body {
         font-family:Georgia;
         color: #05386B;
-        padding: 5px;
-        background:	#a8e4a0;
-        margin: 0;
+        padding: 10px;
+        background: #379683;
       }
       /* HEADER */
       .header {
