--- a/registerStyle.css
+++ b/registerStyle.css
@@ -300,6 +300,11 @@ body
   background: #FFFFE0;
 
   text-align: center;
+
+  float: left;
+  padding:20px;
+  width: 40%;
+  height: 75%;
 }
 #submit
 {
