--- a/deposit.css
+++ b/deposit.css
@@ -31,9 +31,8 @@
       /* Right column */
       .rightcolumn {
         float: right;
-        width: 25%;
-        padding-right: 40px;
-
+        width: 30%;
+        padding-right: 10%;
       }
 
       .account {
@@ -44,10 +43,10 @@
       }
 
       .column {
-        background-color: #EDF5E1;
-        padding: 40px;
-        margin-top: 40px;
-        width: 95%;
+            background-color: #EDF5E1;
+            padding: 40px;
+            margin-top: 40px;
+            width: 95%;
       }
 
       /* Clear floats after the columns */
